ckad/cm_secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
spec:
  containers:
  - name: test-container
    image: nginx:alpine
 #   command: [ "/bin/sh", "-c", "env" ]
  volumes:
  - name: secret-volume
    secret:
      # Provide the name of the secret containing the files you want
      # to add to the container
      secretName: my-secret                     
  restartPolicy: Never
