ckad/probe.yml
# /opt/course/p1/project-23-api-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-23-api
  namespace: neptune
spec:
  replicas: 3
  selector:
    matchLabels:
      app: project-23-api
  template:
    metadata:
      name: busybox-pod
      labels:
        app: project-23-api
    spec:
      containers:
      - image: busybox:1.31.0
        name: busybox-container
        command:
        - sh
        - -c
        - touch /tmp/ready && sleep 1d
        startupProbe:
          httpGet: 
            path: /healthz
            port: 80
            httpHeaders:
            - name: Accept
              value: application/json
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - cat /tmp/ready
          initialDelaySeconds: 5
          periodSeconds: 5
