ckad/pvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sunny
  name: sunny
  namespace: mercury
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sunny-pod
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sunny-pod
    spec:
      volumes:
      - name: mypd
        persistentVolumeClaim:
          claimName: myclaim-pvc
      containers:
      - image: nginx:1.17.3-alpine
        name: nginx
        resources: {}
        volumeMounts:
        - mountPath: "/var/www/html"
          name: mypd
status: {}
