ckad/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
  namespace: neptune
  labels:
    app: deploy-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-label
  template:
    metadata:
      labels:
        app: pod-label
    spec:
      containers:
      - name: my-con
        image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
          requests:
            cpu: 50m
status: {}
