ckad/secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
spec:
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
    command: [ "/bin/sh", "-c", "env" ]
    volumeMounts:
    - name: secret-volume
      readOnly: true
      mountPath: /etc/secret
  volumes:
  - name: secret-volume
    secret:
      # Provide the name of the secret containing the files you want
      # to add to the container
      secretName: special-secret                     
  restartPolicy: Never
