ckad/networkpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
  namespace: venus
spec:
  podSelector:
    matchLabels:
      id: frontend # label of the pods this policy will be applied on
  policyTypes:
  - Egress #  control egress
  - Ingress
  ingress:
  - from: # 1st ingress rule
    - podSelector: # allow ingress only from pods with api label
        matchLabels: 
          id: api
  egress:
  - to: # 1st egress rule
    - podSelector: # allow egress only to pods with api label
        matchLabels: 
          id: api
  - ports:   # 2nd egress rule
    - port: 53 # allow DNS UDP
      protocol: UDP
    - port: 53 # allow DNS TCP
      protocol: TCP
