ckad/networkpol2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
  namespace: venus
spec:
  podSelector: {}  # applied to all pods in namespace
  policyTypes:
  - Egress #  control egress
  - Ingress
  ingress:
  - from: # 1st ingress rule
    - podSelector: # allow ingress only from pods with frontend label
        matchLabels: 
          id: frontend
  egress:
  - to: # 1st egress rule
    - podSelector: # allow egress only to pods with api label
        matchLabels: 
          id: api
